Add and comment a line that change the value of a CSS variable

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ button {
     cursor: pointer;
 }
 
-.navbar {
+#navbar {
     background-color: var(--white);
     display:flex;
     justify-content: space-between;
